# forecast

./: .gitignore  Makefile  PR_SQUASH_MESSAGE.md  pyproject.toml  readme.md
.github/: pull_request_template.md
doc/: project-structure.md
doc/architecture/: arc42.md
doc/example/: example report.md
doc/manual/: README.md  bundling.md  config.sample.yml  manual.md
doc/requirement/: questions.md  requirements.md
doc/reviews/: 2025-08-31_release_notes.md  review-2025-08-25.md
features/: calc.feature
scripts/: bundle_macos.sh  entry_forecast.py  smoke.sh
src/forecast/: calendar.py  capacity.py  cli.py  compute.py  config.py  formatting.py  report.py  server.py  weights.py
