[project]
name = "forecast-planner"
version = "0.1.0"
description = "CLI-Tool für Stunden- und Umsatz-Forecast je Projekt"
requires-python = ">=3.11"
authors = [{name = "Daniel L.", email = ""}]
readme = "README.md"
license = {text = "Proprietary"}
dependencies = [
  "PyYAML>=6.0",
  "holidays>=0.51",
  "tabulate>=0.9.0",
]

[project.scripts]
forecast = "forecast.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["forecast"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
